<resources>
    <string name="app_name">RestMyOrder</string>
    <string name="action_settings">Settings</string>
    <string name="dishFrag_action_insert">Add Dish</string>
    <string name="dishFrag_action_update">Update Dish</string>
    <string name="dishFrag_edit_dish_type">Dish type:</string>
    <string name="dishFrag_edit_price">Dish price:</string>
    <string name="dishFrag_edit_name">Dish name:</string>
    <string name="dishFrag_cmd_edit_selected">Edit selected</string>
    <string name="dishFrag_cmd_new_dish">New Dish</string>
    <string name="dishFrag_lbl_dish_type">Dish Type</string>
    <string name="dishFrag_lbl_dish">Dish List</string>
    <string name="orderFrag_lbl_table">Table:</string>
    <string name="orderFrag_total">Total: %1$3.2f</string>
    <string name="orderFrag_dish_type">Dish Type</string>
    <string name="orderFrag_dish_list">Dish List</string>
    <string name="orderFrag_lbl_sit">Sit:</string>
    <string name="orderFrag_cmd_update_dish">Update</string>
    <string name="orderFrag_cmd_add_dish">+ Add</string>
    <string name="orderFrag_cmd_remove_dish">- Remove Dish</string>
    <string name="orderFrag_lbl_comments">Comments:</string>
    <string name="kitchenFrag_cmd_show_order">Show order</string>
    <string name="sqliteFrag_lbl_desc">Select or write a query</string>
    <string name="orderFrag_title">Orders</string>
    <string name="kitchenFrag_title">Kitchen</string>
    <string name="dishFrag_title">Dishes</string>
    <string name="historyFrag_title">History</string>
    <string name="sqliteFrag_title">DBA</string>
    <string name="userFrag_title">Users</string>
    <string name="sit_title">sit</string>
    <string name="kitchenFrag_header_dish">Dish</string>
    <string name="kitchenFrag_header_is_ready">Is Ready</string>
    <string name="kitchenFrag_header_is_served">Is Served</string>
    <string name="kitchenFrag_header_price">Price</string>
    <string name="sqliteFrag_btnSubmit">Submit</string>
    <string name="orderFrag_cmdrefresh">refresh</string>
    <string name="historyFrag_cmd_show_order">Show order</string>
    <string name="historyFrag_cmdShowTables">Show Tables</string>
    <string name="kitchenFrag_cmdrefresh">Refresh</string>
    <string name="kitchenFrag_header_comments">Comments</string>
    <string name="InvFrag_cmd_edit_table">Edit table</string>
    <string name="InvFrag_cmd_new_table">New table</string>
    <string name="InvFrag_cmd_save_table">Save table</string>
    <string name="InvFrag_lbl_edit_dining_table">Edit Dining table</string>
    <string name="InvFrag_lbl_dining_table_list">Dining table</string>
    <string name="orderFrag_hint_comments">comments</string>
    <string name="orderFrag_hint_sit">sit</string>
    <string name="orderFrag_cmd_new">New</string>
    <string name="orderFrag_toast_added">Dish added</string>
    <string name="orderFrag_toast_Updated">Dish updated</string>
    <string name="userDataFrag_lbl_fulName">Full name</string>
    <string name="userDataFrag_lbl_email">Email</string>
    <string name="userDataFrag_lbl_password">Password</string>
    <string name="userDataFrag_lbl_role">Role</string>
    <string name="userFrag_full_name">Full name</string>
    <string name="userFrag_email">Email</string>
    <string name="userFrag_password">Password</string>
    <string name="userFrag_new_user">New</string>
    <string name="userFrag_handleUser">Save</string>
    <string name="userFrag_handleUserResult">User saved</string>
    <string name="user_invalid_name">Invalid name</string>
    <string name="user_invalid_email">Invalid email</string>
    <string name="user_invalid_password">Invalid Password</string>
    <string name="userFrag_role">Role</string>
    <string name="orderFrag_date">Date</string>
    <string name="login_enter">Enter</string>
    <string name="login_username">Enter username:</string>
    <string name="login_password">password</string>
    <string name="waiter">Waiter</string>
    <string name="chef">Chef</string>

</resources>
