<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dishesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:attr/buttonBarStyle"
    tools:context=".Restaurant">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/dishFrag_lbl_dish_type"
                android:labelFor="@+id/dishFrag_cmbDishType"
                android:padding="3dip" />
            <TextView
                android:text="@string/dishFrag_lbl_dish"
                android:labelFor="@+id/dishFrag_cmbDish"
                android:gravity="start"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/dishFrag_cmbDishType"></Spinner>
            <Spinner
                android:id="@+id/dishFrag_cmbDish"></Spinner>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/dishFrag_cmdEditDish"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/dishFrag_cmd_edit_selected"/>
            <Button
                android:id="@+id/dishFrag_cmdNewDish"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/dishFrag_cmd_new_dish"/>
        </TableRow>
        <TableRow>
            <TextView
                android:labelFor="@+id/dishFrag_txtEditDishName"
                android:text="@string/dishFrag_edit_name"/>
            <EditText
                android:id="@+id/dishFrag_txtEditDishName"
                android:inputType="text"
                android:layout_width="90dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:labelFor="@+id/dishFrag_txtEditDishPrice"
                android:text="@string/dishFrag_edit_price"/>
            <EditText
                android:id="@+id/dishFrag_txtEditDishPrice"
                android:inputType="numberDecimal"
                android:layout_width="90dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/dishFrag_edit_dish_type"/>
            <Spinner
                android:id="@+id/dishFrag_cmbEditDishType"></Spinner>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/dishFrag_cmdUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/dishFrag_action_insert"/>
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF00FF00"
                android:layout_span="2"/>
        </TableRow>
        <TableRow>
            <TextView
            android:text="@string/InvFrag_lbl_dining_table_list"
            android:labelFor="@+id/dishFrag_cmbDiningTable"
            android:padding="3dip" />
            <Spinner
                android:id="@+id/dishFrag_cmbDiningTable"></Spinner>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/dishFrag_cmdEditDiningTable"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/InvFrag_cmd_edit_table"/>
            <Button
                android:id="@+id/dishFrag_cmdNewDiningTable"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/InvFrag_cmd_new_table"/>
        </TableRow>
        <TableRow>
            <TextView
                android:labelFor="@+id/dishFrag_txtEditDiningTable"
                android:text="@string/InvFrag_lbl_edit_dining_table"/>
            <EditText
                android:id="@+id/dishFrag_txtEditDiningTable"
                android:inputType="text"
                android:layout_width="90dp"/>
        </TableRow>
        <TableRow>
            <Button
            android:id="@+id/dishFrag_cmdSaveDiningTable"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="bold"
            android:text="@string/InvFrag_cmd_save_table"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>