<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/kitchenFragDataSit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kitchenFragDataDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/kitchenFrag_header_dish"
        app:layout_constraintStart_toEndOf="@+id/kitchenFragDataSit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kitchenFragDataComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kitchenFrag_header_comments"
        app:layout_constraintEnd_toStartOf="@+id/kitchenFragDataPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kitchenFragDataPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kitchenFrag_header_price"
        app:layout_constraintEnd_toStartOf="@+id/kitchenFragDataIsReady"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/kitchenFragDataIsReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/kitchenFragDataIsServed"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/kitchenFragDataIsServed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

</android.support.constraint.ConstraintLayout>
