<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orderFrag_lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/orderFrag_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/orderFrag_cmbDiningTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/orderFrag_lbl_date"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- 2nd row dish type and dish -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline_dishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_lbl_date"/>
    <View
        android:id="@+id/orderFrag_hr_dishes"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#DEDEDE"
        app:layout_constraintTop_toBottomOf="@+id/guideline_dishes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/orderFrag_cmbDishType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_dishes" />

    <Spinner
        android:id="@+id/orderFrag_cmbDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_dishes" />


    <!-- 3rd row edit orderItem-->
    <View
        android:id="@+id/orderFrag_hr_edit"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#DEDEDE"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_cmbDishType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/orderFrag_txtSitNum"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:hint="@string/orderFrag_hint_sit"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_edit"/>


    <EditText
        android:id="@+id/orderFrag_txtComments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/orderFrag_hint_comments"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderFrag_txtSitNum"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_edit"/>

    <!-- 4th row buttons-->

    <View
        android:id="@+id/orderFrag_hr_buttons"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#DEDEDE"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_txtSitNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/orderFrag_cmdRemoveDish"
        style="?android:attr/buttonBarNeutralButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderFrag_cmd_remove_dish"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_buttons" />

    <Button
        android:id="@+id/orderFrag_cmdAddDish"
        style="?android:attr/buttonBarNeutralButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/orderFrag_cmd_add_dish"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/orderFrag_cmdNewDish"
        app:layout_constraintStart_toEndOf="@+id/orderFrag_cmdRemoveDish"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_buttons" />

    <Button
        android:id="@+id/orderFrag_cmdNewDish"
        style="?android:attr/buttonBarNeutralButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderFrag_cmd_new"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/orderFrag_cmdRefresh"
        app:layout_constraintStart_toEndOf="@+id/orderFrag_cmdAddDish"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_buttons" />

    <Button
        android:id="@+id/orderFrag_cmdRefresh"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderFrag_cmdrefresh"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_buttons" />

    <!-- 5th row horizontal line-->
    <View
        android:id="@+id/orderFrag_hr_detail"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_cmdRemoveDish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 6th row grid header-->
    <include
        android:id="@+id/orderFrag_dish_list_header"
        layout="@layout/dish_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_hr_detail" />

    <!-- 6th row grid data-->
    <GridView
        android:id="@+id/orderFrag_grdDishList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="1"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderFrag_dish_list_header"
        app:layout_constraintBottom_toTopOf="@+id/orderFrag_lblSum" />

    <TextView
        android:id="@+id/orderFrag_lblSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderFrag_total"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
